--- a/ChickCheck.xcodeproj/xcshareddata/xcschemes/ChickCheck.xcscheme
+++ b/ChickCheck.xcodeproj/xcshareddata/xcschemes/ChickCheck.xcscheme
@@ -28,6 +28,19 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       shouldAutocreateTestPlan = "YES">
+      <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "11A929392C13039100C0E47E"
+               BuildableName = "ChickCheckTests.xctest"
+               BlueprintName = "ChickCheckTests"
+               ReferencedContainer = "container:ChickCheck.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
